# late-sh

./: .dockerignore  .gitignore  .mise.toml  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSING.md  MUSIC.md  Makefile  PLAN.md  README.md  docker-compose.monitoring.yml  docker-compose.yml
.github/instructions/: PLAN-ARTBOARD-INTERACTION-DETAILS.md  PLAN-ARTBOARD.md
.github/workflows/: build.yml  ci.yml  deploy.yml  deploy_cli.yml  deploy_infra.yml  deploy_web.yml  terraform.yml
devdocs/: FLOW-CLI-KEY-ONBOARDING.md  PLAN-CLI-IMPROVE-KEY-ONBOARDING.md  PLAN-LATE-IRC-V3-TIER1.md  REVIEW-CLI-IMPROVE-KEY-ONBOARDING.md  TODO-IRCD.md
docs/: DRAFT-ADMIN-AND-MOD-TOOLS.md  PERMISSIONS-MATRIX.csv  PLAN-ADMIN-AND-MOD-TOOLs.md  PROTOTYPE-CC-MAIN-SCREEN.md  SUBPLAN-ADMIN-FOUNDATIONS.md  SUBPLAN-ADMIN-SURFACES.md  SUBPLAN-CONTENT-MODERATION-AND-UX.md  SUBPLAN-ROOM-MODERATION.md  SUBPLAN-SERVER-USER-MODERATION.md
infra/: .env.example  .gitignore  README.md  backend.tf  backend.tf.tpl  cert-manager.tf  cloudnativepg.tf  icecast.tf  ingress.tf  ipv6-proxy.tf  liquidsoap.tf  main.tf  monitoring.tf  providers.tf  secrets.tf  service-ssh.tf  service-web.tf  setup_app.sh  setup_rke2.sh  ssh-tcp.tf  variables.tf
infra/icecast/: icecast.xml
infra/liquidsoap/: ambient.m3u  classic.m3u  fetch_mp3s.py  jazz.m3u  lofi.m3u  radio.liq
late-cli/: CONTEXT.md  README.md
late-cli/src/: config.rs  identity.rs  main.rs  onboarding.rs  ssh.rs
late-cli/src/audio/: mod.rs
late-core/: Cargo.toml
late-core/migrations/: 031_add_moderation_foundations.sql  037_create_ssh_session_events.sql  047_number_and_flag_artboard_snapshots.sql
late-core/src/: api_types.rs  icecast.rs  rate_limit.rs  test_utils.rs
late-core/src/models/: artboard.rs  article.rs  article_feed_read.rs  bonsai.rs  chat_message.rs  chat_room.rs  chat_room_member.rs  chips.rs  leaderboard.rs  mod.rs  nonogram.rs  notification.rs  profile.rs  room_ban.rs  server_ban.rs  ssh_session_event.rs  tetris.rs  twenty_forty_eight.rs  user.rs  vote.rs
late-core/tests/: artboard_snapshot.rs  bonsai.rs  moderation.rs  ssh_key.rs  user.rs  vote.rs
late-core/tests/chat/: member.rs  message.rs  room.rs
late-ssh/: Cargo.toml
late-ssh/src/: api.rs  authz.rs  config.rs  dartboard.rs  lib.rs  main.rs  metrics.rs  session.rs  ssh.rs  state.rs  web.rs
late-ssh/src/app/: input.rs  mod.rs  qr.rs  render.rs  state.rs  tick.rs  visualizer.rs
late-ssh/src/app/ai/: ghost.rs  svc.rs
late-ssh/src/app/artboard/: CONTEXT.md  data.rs  input.rs  mod.rs  page.rs  state.rs  svc.rs  ui.rs
late-ssh/src/app/audio/: CONTEXT.md  svc.rs
late-ssh/src/app/bonsai/: mod.rs  model.rs  (+3 more)
late-ssh/src/ircd/: conn.rs
late-ssh/src/moderation/: command.rs  service.rs  session_effects.rs
late-ssh/tests/: app_dashboard_flow.rs  app_input_flow.rs  app_smoke.rs  ssh_smoke.rs  ws_smoke.rs
late-ssh/tests/artboard/: svc.rs
late-ssh/tests/bonsai/: svc.rs
late-ssh/tests/chat/: main.rs  news.rs  svc.rs
late-ssh/tests/games/: artboard.rs  dartboard.rs
late-ssh/tests/helpers/: mod.rs
late-ssh/tests/ircd/: smoke.rs
late-ssh/tests/profile/: svc.rs
late-ssh/tests/vote/: svc.rs
late-web/: Cargo.toml
late-web/src/: lib.rs  main.rs
late-web/src/pages/: app.html  mod.rs  stream.rs
late-web/src/pages/chat/: mod.rs  page.html
late-web/src/pages/connect/: mod.rs  page.html  status.html
late-web/src/pages/dashboard/: mod.rs  partial_now_playing.html
late-web/src/pages/gallery/: mod.rs  page.html
late-web/src/pages/shared/: now_playing.rs
late-web/static/: site.webmanifest  style.css
late-web/tests/: dashboard.rs  stream.rs
monitoring/: grafana-dashboards.yaml  grafana-datasources.yaml  otel-collector-config.yaml
monitoring/dashboards/: observability.json
scripts/: connect_local_user.sh  fetch_cc_music.py  install.sh  run_local_cli.sh  run_prod_cli.sh
(+78 files in other folders)
