[workspace]
members = [
    "late-cli",
    "late-core",
    "late-ssh",
    "late-web",
]
resolver = "2"

[workspace.dependencies]
# Core Utils
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10", features = ["serde", "v7"] }

# Async / Runtime
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web / HTTP
axum = "0.8.8"
reqwest = "0.13.1"
tower-http = "0.6.8"

# Database
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }

# Telemetry
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry-http = "0.31.0"
tracing-opentelemetry = "0.32.1"
opentelemetry-appender-tracing = "0.31.1"

[profile.release]
# Strip debug info but keep symbols for readable panic stack traces
strip = "debuginfo"

# Use Thin LTO for a balance of compilation speed and runtime performance
lto = "thin"
